--- a/es/frontend/games/quimiuami.html
+++ b/es/frontend/games/quimiuami.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -44,7 +44,7 @@
 
   <!-- Start of project here-->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"></script>
   <!--Main Navigation-->
   <header id="page-top">
     <!-- Navbar -->
@@ -63,33 +63,33 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/index.html">Games</a>
+              <a class="nav-link waves-effect" href="../../index.html">Juegos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/about.html">About us</a>
+              <a class="nav-link waves-effect" href="../../about.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/projects.html">Projects</a>
+              <a class="nav-link waves-effect" href="../../projects.html">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/services.html">Services</a>
+              <a class="nav-link waves-effect" href="../../services.html">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect disabled" href="/blog.html">Blog</a>
+              <a class="nav-link waves-effect disabled" href="../../blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect disabled" href="/store.html">Store</a>
+              <a class="nav-link waves-effect disabled" href="../../store.html">Tienda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/contact.html">Contact</a>
+              <a class="nav-link waves-effect" href="../../contact.html">Contacto</a>
             </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-language"></i> Language </a>
+                <i class="fas fa-language"></i> Laenguaje </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                <a class="dropdown-item" href="http://soufunstudio.com/es">Spanish</a>
-                <a class="dropdown-item" href="http://soufunstudio.com/jp">Japanese</a>
+                <a class="dropdown-item" href="/">English</a>
+                <a class="dropdown-item" href="/jp">日本語</a>
               </div>
             </li>
           </ul>
@@ -151,7 +151,7 @@
           <!--Grid column-->
           <div class="col-md-4">
             <!--Twitter-->
-            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false"></a>
+            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false" data-lang="es"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <!--Grid column-->
@@ -200,41 +200,41 @@
 
                 <h5 class="font-weight-normal mb-3 text-dark"><strong>Quimiuami</strong></h5>
 
-                <p class="dark-grey-text">In commemoration of the year
-                  international periodic table
-                  Quimiuami was created in December
+                <p class="dark-grey-text">En conmemoración del año
+                  internacional de la tabla periódica
+                  Quimiuami fue creado en diciembre
                   2019.
                 </p>
-                <p class="dark-grey-text">This is an app
-                  with augmented reality that
-                  allows to visualize the atoms
-                  of all the elements of the
-                  periodic table as well as its
-                  most relevant information.
+                <p class="dark-grey-text">Esta es una aplicación
+                  con realidad aumentada que
+                  permite visualizar los átomos
+                  de todos los elementos de la
+                  tabla periódica, así como su
+                  Información más relevante.
                 </p>
                 <ul class="list-unstyled font-small mt-5 mb-0">
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Genre</strong></p>
-                    <p class="mb-4 dark-grey-text">Education, Augumented Reality</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Género</strong></p>
+                    <p class="mb-4 dark-grey-text">Educación, Realidad Aumentada</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Release</strong></p>
-                    <p class="mb-4 dark-grey-text">December 14, 2019</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Lanzamiento</strong></p>
+                    <p class="mb-4 dark-grey-text">Diciembre 14, 2019</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Mode(s)</strong></p>
-                    <p class="mb-4 dark-grey-text">Single-player</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Modo(s)</strong></p>
+                    <p class="mb-4 dark-grey-text">Un-jugador</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Platform(s)</strong></p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Plataforma(s)</strong></p>
                     <p class="mb-4 dark-grey-text">Android, IOs</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Devloper</strong></p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Desarrollador</strong></p>
                     <p class="mb-4"><img src="/img/brand/soufunlogo-variant-1-icon.png" height="20" width="60" alt="Logo"></p>
                   </li>
                 </ul>
@@ -308,25 +308,25 @@
               <!-- Grid column -->
               <div class="col-md-6 p-5">
 
-                <h2 class="h2 mb-4 text-dark">Now Available</h2>
-                <p class="mb-4 dark-grey-text">Our app is available on android and apple devices! Download now to get started!</p>
+                <h2 class="h2 mb-4 text-dark">Disponible Ahora</h2>
+                <p class="mb-4 dark-grey-text">Nuestra app está disponible para dispositivos Android e iOS! Descarga ahora para comenzar!</p>
                 <a href="https://apps.apple.com/us/app/quimiuam-i/id1492027024?l=es" class="btn btn-outline-download waves-effect btn-md ml-lg-0 rounded-pill" target="_blank"><i class="fab fa-apple fa-md pr-1"></i> App Store</a>
-                <a href="https://play.google.com/store/apps/details?id=com.soufunstudio.quimiuami&hl=en_Us" class="btn btn-outline-download waves-effect btn-md rounded-pill" target="_blank">
+                <a href="https://play.google.com/store/apps/details?id=com.soufunstudio.quimiuami&hl=es_LA" class="btn btn-outline-download waves-effect btn-md rounded-pill" target="_blank">
                   <i class="fab fa-google-play fa-md pr-1"></i> Google Play</a>
 
                 <!--Form newsletter-->
-                <h2 class="h2 mb-4 text-dark pb-2 pt-5">Stay Updated</h3>
-                  <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
+                <h2 class="h2 mb-4 text-dark pb-2 pt-5">Mantente Actualizado</h2>
+                <p class="mb-4 dark-grey-text pt-2">Suscríbete a nuestro boletín para estar siempre al tanto de nuestras nuevas actualizaciones.</p>
 
-                  <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
-                    <div class="input-group mb-3">
-                      <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
-                      <div class="input-group-append">
-                        <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
-                      </div>
+                <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                    <div class="input-group-append">
+                      <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Registrarse<i class="fas fa-arrow-right pl-2"></i></button>
                     </div>
-                  </form>
-                  <!--Form newsletter-->
+                  </div>
+                </form>
+                <!--Form newsletter-->
               </div>
               <!-- Grid column -->
 
@@ -370,7 +370,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase">Conéctate con nosotros! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
@@ -396,7 +396,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase">Contact Us</h5>
+          <h5 class="text-uppercase">Contáctanos</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
@@ -405,7 +405,7 @@
               <a href="mailto:contact@soufunstudio.com">contact@soufunstudio.com</a>
             </li>
             <li>
-              <a href="/contact.html">Av. San Francisco Tlaltenco
+              <a href="../../contact.html">Av. San Francisco Tlaltenco
                 Ciudad de México, Cd. de México</a>
             </li>
           </ul>
@@ -415,16 +415,16 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5>SouFunStudio</h5>
+          <h5>SouFun Studio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="../commons/privacy_policy.html">Privacy policy</a>
+              <a href="../commons/privacy_policy.html">Politica de privacidad</a>
             </li>
             <li>
-              <a href="../commons/terms_of_use.html">Terms of use</a>
+              <a href="../commons/terms_of_use.html">Términos de uso</a>
             </li>
             <li>
-              <a href="/contact.html">Sitemap</a>
+              <a href="../../contact.html">Mapa del sitio</a>
             </li>
             <li>
               <a href="../info/faqs.html">FAQ</a>
@@ -447,7 +447,7 @@
           <img src="/img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
         </li>
         <li class="list-inline-item">
-          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
+          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">La fuente Sen tiene licencia bajo OFL.</a>
         </li>
       </ul>
     </div>
