--- a/es/frontend/games/uami_vr.html
+++ b/es/frontend/games/uami_vr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -56,7 +56,7 @@
 
   <!-- Start of project here-->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"></script>
   <!--Main Navigation-->
   <header id="page-top">
     <!-- Navbar -->
@@ -75,33 +75,33 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/index.html">Games</a>
+              <a class="nav-link waves-effect" href="../../index.html">Juegos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/about.html">About us</a>
+              <a class="nav-link waves-effect" href="../../about.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/projects.html">Projects</a>
+              <a class="nav-link waves-effect" href="../../projects.html">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/services.html">Services</a>
+              <a class="nav-link waves-effect" href="../../services.html">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect disabled" href="/blog.html">Blog</a>
+              <a class="nav-link waves-effect disabled" href="../../blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect disabled" href="/store.html">Store</a>
+              <a class="nav-link waves-effect disabled" href="../../store.html">Tienda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/contact.html">Contact</a>
+              <a class="nav-link waves-effect" href="../../contact.html">Contacto</a>
             </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-language"></i> Language </a>
+                <i class="fas fa-language"></i> Lenguaje </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                <a class="dropdown-item" href="http://soufunstudio.com/es">Spanish</a>
-                <a class="dropdown-item" href="http://soufunstudio.com/jp">Japanese</a>
+                <a class="dropdown-item" href="/">English</a>
+                <a class="dropdown-item" href="/jp">日本語</a>
               </div>
             </li>
           </ul>
@@ -163,7 +163,7 @@
           <!--Grid column-->
           <div class="col-md-4">
             <!--Twitter-->
-            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false"></a>
+            <a href="https://twitter.com/SouFUNStudio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false" data-lang="es"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <!--Grid column-->
@@ -231,36 +231,36 @@
 
                 <h5 class="font-weight-normal mb-3 text-dark"><strong>UAM-I VR</strong></h5>
 
-                <p class="dark-grey-text">It arises in order that
-                  more people get to know the UAM Iztapalapa university in a way
-                  innovative and fun.
+                <p class="dark-grey-text">Surge para que
+                  más personas lleguen a conocer la universidad UAM Iztapalapa de una manera
+                  innovadora y divertida.
                 </p>
-                <p class="dark-grey-text">Currently still in development
-                  later it will be mounted on the website of the university.
+                <p class="dark-grey-text">Actualmente todavía en desarrollo
+                  luego se montará en el sitio web de la universidad.
                 </p>
                 <ul class="list-unstyled font-small mt-5 mb-0">
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Genre</strong></p>
-                    <p class="mb-4 dark-grey-text">Simulation, Virtual Reality</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Género</strong></p>
+                    <p class="mb-4 dark-grey-text">Simulación, Realidad Virtual</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Release</strong></p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Lanzamiento</strong></p>
                     <p class="mb-4 dark-grey-text">N/A</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Mode(s)</strong></p>
-                    <p class="mb-4 dark-grey-text">Single-player</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Modo(s)</strong></p>
+                    <p class="mb-4 dark-grey-text">Un-jugador</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Platform(s)</strong></p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Plataforma(s)</strong></p>
                     <p class="mb-4 dark-grey-text">Web</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2 text-dark"><strong>Devloper</strong></p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Desarrollador</strong></p>
                     <p class="mb-4"><img src="/img/brand/soufunlogo-variant-1-icon.png" height="20" width="60" alt="Logo"></p>
                   </li>
                 </ul>
@@ -273,29 +273,29 @@
             <div class="row d-flex justify-content-center">
               <!--Grid column-->
               <div class="col-md-6 p-5">
-                <h2 class="h2 mb-4 text-dark">You can try the current virtual tour</h2>
-                <p class="mb-4 dark-grey-text text-justify">Enjoy this virtual reality UAM-I that is still in development,
-                  if you are interested in this type of project we can also develop it for you,
-                  do not hesitate to contact us!.</p>
+                <h2 class="h2 mb-4 text-dark">Puedes probar el tour virtual actual</h2>
+                <p class="mb-4 dark-grey-text text-justify">Disfruta de esta realidad virtual UAM-I que aún está en desarrollo,
+                  Si estás interesado en este tipo de proyectos, también podemos desarrollarlo para ti,
+                  ¡No dudes en ponerte en contacto con nosotros!.</p>
               </div>
               <!--Grid column-->
 
               <!--Grid column-->
               <div class="col-md-6 p-5">
 
-                <h2 class="h2 mb-4 text-dark">Stay Updated</h3>
-                  <p class="mb-4 dark-grey-text">Subscribe to our newsletter to be always aware of our new updates.</p>
+                <h2 class="h2 mb-4 text-dark pb-2 pt-5">Mantente Actualizado</h2>
+                <p class="mb-4 dark-grey-text pt-2">Suscríbete a nuestro boletín para estar siempre al tanto de nuestras nuevas actualizaciones.</p>
 
-                  <!--Form newsletter-->
-                  <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
-                    <div class="input-group mb-3">
-                      <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
-                      <div class="input-group-append">
-                        <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
-                      </div>
+                <!--Form newsletter-->
+                <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                    <div class="input-group-append">
+                      <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Registrarse<i class="fas fa-arrow-right pl-2"></i></button>
                     </div>
-                  </form>
-                  <!--Form newsletter-->
+                  </div>
+                </form>
+                <!--Form newsletter-->
 
               </div>
               <!--Grid column-->
@@ -343,7 +343,7 @@
 
               <!-- Grid column -->
               <div class="col-md-6 text-center py-1">
-                <span class="mb-4 dark-grey-text text-justify pr-3">Fullscreen mode</span>
+                <span class="mb-4 dark-grey-text text-justify pr-3">Pantalla Completa</span>
                 <a class="fullscreen" onclick="gameInstance.SetFullscreen(1)">
                   <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
                 </a>
@@ -372,7 +372,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase">Conéctate con nosotros! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
@@ -398,7 +398,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase">Contact Us</h5>
+          <h5 class="text-uppercase">Contáctanos</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
@@ -407,7 +407,7 @@
               <a href="mailto:contact@soufunstudio.com">contact@soufunstudio.com</a>
             </li>
             <li>
-              <a href="/contact.html">Av. San Francisco Tlaltenco
+              <a href="../../contact.html">Av. San Francisco Tlaltenco
                 Ciudad de México, Cd. de México</a>
             </li>
           </ul>
@@ -417,16 +417,16 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5>SouFunStudio</h5>
+          <h5>SouFun Studio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="../commons/privacy_policy.html">Privacy policy</a>
+              <a href="../commons/privacy_policy.html">Politica de privacidad</a>
             </li>
             <li>
-              <a href="../commons/terms_of_use.html">Terms of use</a>
+              <a href="../commons/terms_of_use.html">Términos de uso</a>
             </li>
             <li>
-              <a href="/contact.html">Sitemap</a>
+              <a href="../../contact.html">Mapa del sitio</a>
             </li>
             <li>
               <a href="../info/faqs.html">FAQ</a>
@@ -449,7 +449,7 @@
           <img src="/img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
         </li>
         <li class="list-inline-item">
-          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
+          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">La fuente Sen tiene licencia bajo OFL.</a>
         </li>
       </ul>
     </div>
